Padd it out with some text

--- a/templates/site.html
+++ b/templates/site.html
@@ -28,7 +28,6 @@
                 background:rgba(0, 0, 0,0.8);
                 padding: 5px 0 5px;
                 overflow: hidden;
-                background-color: #333;
                 position: fixed; /* Set the navbar to fixed position */
                 top: 0; /* Position the navbar at the top of the page */
                 width: 100%; /* Full width */
@@ -335,7 +334,7 @@
             <div class="container text-center">
                 <div class="row flex-column-reverse flex-lg-row">
                     <div class="col-lg-6 text-left white card card-body" >
-                        <p>Our reception will take place at Edd's Grandma's
+                        <p>Our reception will take place at Edward's Grandma's
                         garden in Offham, West Malling. We will be
                         providing some transport from the church to the
                         field so please let us know in the RSVP if you will
@@ -420,7 +419,29 @@
                             <h3>Wedding Breakfast</h3>
                         </div>
                         <div class="col-lg-12 white card card-body">
-                            <p>From <strong>16:15</strong> until <strong>17:30</strong> we will eat BBQ</p>
+                            <p>From <strong>16:15</strong> until <strong>17:30</strong>
+                               A BBQ lunch will be served in the Marquee:</p>
+                            <h4>Meats</h4>
+                            <ul>
+                                <li>Peri Peri chicken breast</li>
+                                <li>Sweet and sour king prawns</li>
+                                <li>Spiced lamb kofta with a beetroot and apple raita</li>
+                                <li>Selection of butchers sausages</li>
+                            </ul>
+                            <h4>Vegetarian/Vegan Options</h4>
+                            <ul>
+                                <li>BBQ Jackfruit in buns (Vegan)</li>
+                                <li>Spicy Vegan burgers</li>
+                                <li>Portobello mushrooms with Tzatzdiki and caramelised onions</li>
+                                <li>Halloumi & vegetable kebabs</li>
+                            </ul>
+                            <h4>Sides/Salads</h4>
+                            <ul>
+                                <li>Mediterranean vegetables (v)</li>
+                                <li>Garlic and rosemary potatoes (v)</li>
+                                <li>Greek salad with feta cheese (v)</li>
+                                <li>Garlic pesto pasta salad (v)</li>
+                            </ul>
                         </div>
                     </div>
                     {% else %}
@@ -432,7 +453,27 @@
                             <h3>Evening</h3>
                         </div>
                         <div class="col-lg-12 white card card-body">
-                            <p>From <strong>20:00</strong> until <strong>23:00</strong> there will be a Pizza van</p>
+                            <p>From <strong>20:00</strong> until <strong>23:00</strong>
+                            there will be a Pizza van</p>
+                            <p>Menu <strong>TBC</strong></p>
+                            <h4>Pizza</h4>
+                            <ul>
+                                <li>Marinara Pizza</li>
+                                <li>Margherita Pizza</li>
+                                <li>Pepperoni Pizza</li>
+                                <li>Napoletana Pizza</li>
+                                <li>Prosciutto e Funghi Pizza</li>
+                                <li>4 Formaggi, Noci, and Porcini Pizza</li>
+                                <li>Calabrese Pizza</li>
+                                <li>Hawaiian Pizza</li>
+                                <li>4 Stagioni Pizza</li>
+                                <li>Vegetariana Pizza</li>
+                            </ul>
+                            <h4>Calzoni</h4>
+                            <ul>
+                                <li>Verace Calzoni</li>
+                                <li>Italian Salumi Calzoni</li>
+                            </ul>
                         </div>
                     </div>
                     {% if day_guest %}
@@ -446,26 +487,6 @@
 
         <div class="light">
             <div class="container text-center">
-                <h2>Gifts</h2>
-            </div>
-        </div>
-
-        <div class="dark">
-            <div class="container">
-                <div class="row white card card-body">
-                    <p>
-                        As we have lived together for 2 years and are planning on
-                        living abroad in the near future, we do not need any physical gifts. Your
-                        presence at our day is the most important thing to us. However, if you would
-                        like to give a gift, we would be extremely appreciative of any donations
-                        towards our honeymoon.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="light">
-            <div class="container text-center">
                 <h2>Accomodation</h2>
             </div>
         </div>
@@ -473,7 +494,42 @@
         <div class="dark">
             <div class="container">
                 <div class="row white card card-body">
-                    <p>You can stay in a hotel</p>
+                    <p>
+                        Since the on-site AirBnB has already been booked up, we reccomend you
+                        book alternative accomodation. To the best of our knowledge, this is the only
+                        AirBnB in the village. There are a few other AirBnBs near-by, but we're certain
+                        they're terrible so don't stay in them (or do and leave a bad review!)
+                    </p>
+                    <p>
+                       There are a few hotels near Offham, some of which claim to be in Sevenoaks
+                       but are actually in Wrotham Heath. These luxury establishments boast incredible
+                       proximity to the M26 Junction on the A20! These hotels are probably slightly beyond
+                       a safe walking distance after midnight:
+                    </p>
+                    <ul>
+                        <li>Holiday Inn (The Posthouse) - 2.1 miles</li>
+                        <li>Premier Inn (The Beafeater) - 1.9 miles</li>
+                    </ul>
+                    <p>
+                        In the direction of Maidstone, Larkfield has two hotels:
+                    </p>
+                    <ul>
+                        <li>Premier Inn (Castle Lake) - 2.9 miles</li>
+                        <li>Priory Hotel - 2.1 miles</li>
+                    </ul>
+                    <p>
+                        Maidstone has many more hotels, including an award winning Travelodge!
+                        Finding these is an excercise left for the reader.
+                    </p>
+                    <p>
+                        There are also a few 'boutique' hotels and B&amp;Bs in the area. Form a quick Google
+                        search, there are around eigth hotel rooms in West Malling. We've actually just booked
+                        one so now there are only seven.
+                    </p>
+                    <p>
+                        We are still negotiating camping space with the venue management, watch this
+                        space for more developments on this.
+                    </p>
                 </div>
             </div>
         </div>
@@ -487,7 +543,7 @@
         <div class="dark">
             <div class="container">
                 <div class="row white card card-body">
-                    <p>Unfortunately there aren't many Ubers in Offham, and hailing a cab can be quite tricky.
+                    <p>Unfortunately there aren't many Ubers in Offham and hailing a cab can be quite tricky.
                        Instead, here are a few local taxi companies:</p>
                     <ul>
                         <li>
@@ -509,6 +565,34 @@
 
         <div class="light">
             <div class="container text-center">
+                <h2>Gifts</h2>
+            </div>
+        </div>
+
+        <div class="dark">
+            <div class="container">
+                <div class="row white card card-body">
+                    <p>
+                        Since we have been living together for the past two years we've already accumulated
+                        all the physical possesions that exist -- we even have a cordless Dyson. As we
+                        are also planning on moving to New York in the next year or so, we're already looking
+                        for ways to get rid of stuff: anyone want a used sofa bed?
+                    </p>
+                    <p>
+                    <em>In all honesty, your presence at our wedding is the most important thing to us!</em>
+                    </p>
+                    <p>
+                        If however, you are overcome by the desire to follow tradition and do want to give
+                        a gift, we would be extremely appreciative of any donations towards out honeymoon.
+                        We're planning on visting Sri Lanka, we'll post a link to a register on this page
+                        as soon as we've booked something!
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="light">
+            <div class="container text-center">
                 <h2>Contact Us</h2>
             </div>
         </div>
@@ -522,6 +606,6 @@
         </div>
 
 
-        <footer class="text-white text-center">Don't forget to <strong>RSVP!<strong></footer>
+        <footer class="text-white text-center">Don't forget to <strong onclick="scrollToTop()">RSVP!<strong></footer>
     </body>
 </html>
