Attempt to waffle on to fill in white box

--- a/templates/site.html
+++ b/templates/site.html
@@ -268,10 +268,16 @@
                         <img src='static/images/st_phillips.JPG' class='scaled-image mb-2' />
                     </div>
                     <div class="col-lg-6 text-left white card card-body" >
-                        <p>The wedding ceremony will take place in St Philip's
-                        church in Maidstone. We have a deep personal connection to
-                        this church as it is the church in which Bethan was
-                        christened.</p>
+                        <p>
+                            The wedding ceremony will take place in St Philip's church in Maidstone
+                            and will be officiated by Reverend Ian Parish. The ceremony will begin
+                            promptly at 13:00, and will last approximately three-quaters of an hour.
+                        </p>
+                        <p>
+                            We chose this venue for our ceremony as we have a deep personal connection to
+                            the church. This is the church in which Bethan was christened, later
+                            attended play group in, and then went to for dance lessons and Brownies.
+                        </p>
                     </div>
                 </div>
             </div>
