--- a/templates/site.html
+++ b/templates/site.html
@@ -270,14 +270,16 @@
                     <div class="col-lg-6 text-left white card card-body" >
                         <p>
                             The wedding ceremony will take place in St Philip's church in Maidstone
-                            and will be officiated by Reverend Ian Parish. The ceremony will begin
-                            promptly at 13:00, and will last approximately three-quaters of an hour.
+                            and will be officiated by Reverend Ian Parish. Please be seated by 12:45.
+                            The ceremony will last approximately three-quaters of an hour.
                         </p>
                         <p>
-                            We chose this venue for our ceremony as we have a deep personal connection to
+                            We chose this venue for our ceremony as we have a personal connection to
                             the church. This is the church in which Bethan was christened, later
                             attended play group in, and then went to for dance lessons and Brownies.
                         </p>
+                        <p>There is limited on street parking by the church, please click More for
+                           information on nearby pay and display car parks.</p?
                     </div>
                 </div>
             </div>
@@ -292,11 +294,12 @@
                 <div class="card card-body">
                     <div class='container justify-content-center'>
                         <div class='row justify-content-left text-left'>
-                            <p>The church is located near Maidstone Grammar School.</p>
+                            <p>The church is located near Maidstone Grammar School. </p>
                             <p>There is limited on street parking around the
-                            church, and a number of nearby paid car parks
-                            including: </p>
-                            <p><ul>
+                            church, and a number of nearby paid car parks</p>
+                            <p>
+                            These include:
+                            <ul>
                                 <li>
                                     <a href="http://maps.google.co.uk/?ll=51.268674,0.525018&spn=0.000608,0.001742&t=h&z=20">
                                     Brunswick Street</a> (0.2 miles) <strong>ME15 6NP</strong>
@@ -304,10 +307,11 @@
                                 <li>
                                     <a href="http://maps.google.co.uk/?ll=51.271053,0.529074&spn=0.001217,0.003484&t=h&z=19">
                                     Mote Road</a> (0.3 miles) <strong>ME15 6ET</strong></li>
-                            </ul></p>
+                            </ul>
+                            </p>
                         </div>
                         <div class='row justify-content-left text-left'>
-                            <p>You can pay for parking with coins (non-crypto), or with the <a href="https://www.myringgo.co.uk/">RingGo</a> app.</p>
+                            <p>You can pay for parking with coins (no BitCoin), or with the <a href="https://www.myringgo.co.uk/">RingGo</a> app.</p>
                         </div>
                         <h3>Location of the Church</h3>
                         <iframe width="100%" height="450" frameborder="0" style="border:0"
@@ -346,6 +350,8 @@
                         field so please let us know in the RSVP if you will
                         be using this.
                         </p>
+                        <p>Parking is not possible on site, so we ask you to park in a nearby
+                          field that will be signposted on the day. (Please click more for details)</p>
                     </div>
                     <div class="col-lg-6">
                         <img src='static/images/windyridge.jpg' class='scaled-image mb-2' />
@@ -391,18 +397,18 @@
                         <ul>
                             {% if day_guest %}
                             <li><strong>12:30</strong> - Arrive at church</li>
-                            <li><strong>13:00</strong> - Wedding ceremony</li>
+                            <!--<li><strong>13:00</strong> - Wedding ceremony</li>
                             <li><strong>13:45</strong> - Photographs outside church</li>
-                            <li><strong>14:15</strong> - Travel to Offham</li>
+                            <li><strong>14:15</strong> - Travel to Offham</li> -->
                             <li><strong>15:00</strong> - Welcome drinks &amp; Canapes</li>
-                            <li><strong>16:00</strong> - Speeches</li>
-                            <li><strong>16:15</strong> - Breakfast</li>
-                            <li><strong>17:30</strong> - Free time</li>
+                            <!--<li><strong>16:00</strong> - Speeches</li>-->
+                            <li><strong>16:00</strong> - Breakfast</li>
+                            <!--li><strong>17:30</strong> - Free time</li>-->
                             <li><strong>19:30</strong> - Evening guests arrive</li>
                             {% else %}
                             <li><strong>19:30</strong> - Arrive at Windyridge</li>
                             {% endif %}
-                            <li><strong>20:00</strong> - First dance</li>
+                            <!--<li><strong>20:00</strong> - First dance</li>-->
                             <li><strong>00:00</strong> - Lights out</li>
                         </ul>
                     </div>
@@ -503,15 +509,12 @@
                     <h4>Accomodation</h4>
                     <p>
                         Since the on-site AirBnB has already been booked up, we reccomend you
-                        book alternative accomodation. To the best of our knowledge, this is the only
-                        AirBnB in the village. There are a few other AirBnBs near-by, but we're certain
-                        they're terrible so don't stay in them (or do and leave a bad review!)
+                        book alternative accomodation.
                     </p>
                     <p>
-                       There are a few hotels near Offham, some of which claim to be in Sevenoaks
-                       but are actually in Wrotham Heath. These luxury establishments boast incredible
-                       proximity to the M26 Junction on the A20! These hotels are probably slightly beyond
-                       a safe walking distance after midnight:
+                       There are a few hotels near Offham, at Wrotham Heath.
+                       These hotels are probably slightly beyond a safe walking distance
+                       after midnight:
                     </p>
                     <ul>
                         <li>Holiday Inn (The Posthouse) - 2.1 miles</li>
@@ -525,13 +528,15 @@
                         <li>Priory Hotel - 2.1 miles</li>
                     </ul>
                     <p>
-                        Maidstone has many more hotels, including an award winning Travelodge!
-                        Finding these is an excercise left for the reader.
+                        Maidstone has many more hotels. Many are out of town, but within walking
+                        distance of the church is:
                     </p>
+                    <ul>
+                        <li>Travelodge Maidstone Centre </li>
+                        <li>The Townhouse</li>
+                    </ul>
                     <p>
-                        There are also a few 'boutique' hotels and B&amp;Bs in the area. Form a quick Google
-                        search, there are around eigth hotel rooms in West Malling. We've actually just booked
-                        one so now there are only seven.
+                        There are also a few 'boutique' hotels and B&amp;Bs in the area.
                     </p>
                     <p>
                         We are still negotiating camping space with the venue management, watch this
@@ -540,7 +545,7 @@
 
                     <h4>Taxis</h4>
                     <p>Unfortunately there aren't many Ubers in Offham and hailing a cab can be quite tricky.
-                       Instead, here are a few local taxi companies:</p>
+                       We reccomend you book a taxi in advance &ndash; here are a few local taxi companies:</p>
                     <ul>
                         <li>
                             <a href="http://www.westmallingtaxis.co.uk/">West Malling Taxis</a>
@@ -569,19 +574,13 @@
             <div class="container">
                 <div class="row white card card-body">
                     <p>
-                        Since we have been living together for the past two years we've already accumulated
-                        all the physical possesions that exist -- we even have a cordless Dyson. As we
-                        are also planning on moving to New York in the next year or so, we're already looking
-                        for ways to get rid of stuff: anyone want a used sofa bed?
-                    </p>
-                    <p>
-                    <em>In all honesty, your presence at our wedding is the most important thing to us!</em>
-                    </p>
-                    <p>
-                        If however, you are overcome by the desire to follow tradition and do want to give
-                        a gift, we would be extremely appreciative of any donations towards out honeymoon.
-                        We're planning on visting Sri Lanka, we'll post a link to a register on this page
-                        as soon as we've booked something!
+                    As we have lived together for two years and are planning on
+                    living abroad in the near future, we do not need any physical gifts. Your
+                    presence at our day is the most important thing to us. However, if you would
+                    like to give a gift, we would be extremely appreciative of any donations
+                    towards our honeymoon.
+                    We're planning on visting Sri Lanka, we'll post a link to a register on this page
+                    as soon as we've booked something!
                     </p>
                 </div>
             </div>
