--- a/templates/site.html
+++ b/templates/site.html
@@ -271,7 +271,7 @@
                         <p>
                             The wedding ceremony will take place in St Philip's church in Maidstone
                             and will be officiated by Reverend Ian Parish. Please be seated by 12:45.
-                            The ceremony will last approximately three-quaters of an hour.
+                            The ceremony will last approximately three-quarters of an hour.
                         </p>
                         <p>
                             We chose this venue for our ceremony as we have a personal connection to
@@ -400,7 +400,7 @@
                             <!--<li><strong>13:00</strong> - Wedding ceremony</li>
                             <li><strong>13:45</strong> - Photographs outside church</li>
                             <li><strong>14:15</strong> - Travel to Offham</li> -->
-                            <li><strong>15:00</strong> - Welcome drinks &amp; Canapes</li>
+                            <li><strong>15:00</strong> - Welcome drinks &amp; Canapés</li>
                             <!--<li><strong>16:00</strong> - Speeches</li>-->
                             <li><strong>16:00</strong> - Breakfast</li>
                             <!--li><strong>17:30</strong> - Free time</li>-->
@@ -444,7 +444,7 @@
                             <ul>
                                 <li>BBQ Jackfruit in buns (Vegan)</li>
                                 <li>Spicy Vegan burgers</li>
-                                <li>Portobello mushrooms with Tzatzdiki and caramelised onions</li>
+                                <li>Portobello mushrooms with Tzatziki and caramelised onions</li>
                                 <li>Halloumi & vegetable kebabs</li>
                             </ul>
                             <h4>Sides/Salads</h4>
@@ -499,17 +499,17 @@
 
         <div class="light">
             <div class="container text-center">
-                <h2>Accomodation &amp; Taxis</h2>
+                <h2>Accommodation &amp; Taxis</h2>
             </div>
         </div>
 
         <div class="dark">
             <div class="container">
                 <div class="row white card card-body">
-                    <h4>Accomodation</h4>
+                    <h4>Accommodation</h4>
                     <p>
-                        Since the on-site AirBnB has already been booked up, we reccomend you
-                        book alternative accomodation.
+                        Since the on-site AirBnB has already been booked up, we recommend you
+                        book alternative accommodation.
                     </p>
                     <p>
                        There are a few hotels near Offham, at Wrotham Heath.
@@ -545,7 +545,7 @@
 
                     <h4>Taxis</h4>
                     <p>Unfortunately there aren't many Ubers in Offham and hailing a cab can be quite tricky.
-                       We reccomend you book a taxi in advance &ndash; here are a few local taxi companies:</p>
+                       We recommend you book a taxi in advance &ndash; here are a few local taxi companies:</p>
                     <ul>
                         <li>
                             <a href="http://www.westmallingtaxis.co.uk/">West Malling Taxis</a>
@@ -579,7 +579,7 @@
                     presence at our day is the most important thing to us. However, if you would
                     like to give a gift, we would be extremely appreciative of any donations
                     towards our honeymoon.
-                    We're planning on visting Sri Lanka, we'll post a link to a register on this page
+                    We're planning on visiting Sri Lanka, we'll post a link to a register on this page
                     as soon as we've booked something!
                     </p>
                 </div>
