--- a/templates/site.html
+++ b/templates/site.html
@@ -574,13 +574,14 @@
             <div class="container">
                 <div class="row white card card-body">
                     <p>
-                    As we have lived together for two years and are planning on
-                    living abroad in the near future, we do not need any physical gifts. Your
-                    presence at our day is the most important thing to us. However, if you would
-                    like to give a gift, we would be extremely appreciative of any donations
-                    towards our honeymoon.
-                    We're planning on visiting Sri Lanka, we'll post a link to a register on this page
-                    as soon as we've booked something!
+                    As we have been living together for two years and are plan
+                    to live abroad in the near future, we kindly ask that you
+                    don't give us any physical gifts. Your presence at our day
+                    is the most important thing to us. However, if you would
+                    like to give a gift, we would be extremely appreciative of
+                    any donations towards our honeymoon.  We're planning on
+                    visiting Sri Lanka; we'll post a link to a register on this
+                    page as soon as we've booked something!
                     </p>
                 </div>
             </div>
