--- a/templates/site.html
+++ b/templates/site.html
@@ -574,7 +574,7 @@
             <div class="container">
                 <div class="row white card card-body">
                     <p>
-                    As we have been living together for two years and are plan
+                    As we have been living together for two years and plan
                     to live abroad in the near future, we kindly ask that you
                     don't give us any physical gifts. Your presence at our day
                     is the most important thing to us. However, if you would
